5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1582_1559.log
== TEST (2019-03-14 16:55:35) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print((.upper)frase.???)
-- ERROR:
File "XXXX", line 2
    print((.upper)frase.???)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:12:08) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print= ("Ada Lovelace foi a primeira programadora da historia.".upper())
-- ERROR:
File "XXXX", line 2
    print((.upper)frase.???)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:12:12) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print= ("Ada Lovelace foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.211251
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:40:16) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print= print(.upper(("Ada Lovelace foi a primeira programadora da historia."))
-- ERROR:
File "XXXX", line 2
    print= print(.upper(("Ada Lovelace foi a primeira programadora da historia."))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:48:40) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(.upper(("Ada Lovelace foi a primeira programadora da historia.")))
-- ERROR:
File "XXXX", line 2
    print(.upper(("Ada Lovelace foi a primeira programadora da historia.")))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:04:16) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print('Ada Lovelace foi a primeira programadora da historia.'.upper())
-- OUTPUT:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:04:19) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print('Ada Lovelace foi a primeira programadora da historia.'.upper())
-- EXECUTION TIME:
0.207418
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
